--- a/src/app/graficas/pages/barras-doble/barras-doble.component.html
+++ b/src/app/graficas/pages/barras-doble/barras-doble.component.html
@@ -2,10 +2,13 @@
 <hr>
 <div class="row">
     <div class="col-md-6">
-        <app-grafica-barra></app-grafica-barra>
+        <app-grafica-barra [horizontal]="true"
+                            [barChartData]="productoData"
+                            [barChartLabels]="proveedoresLabels"></app-grafica-barra>
     </div>
 
     <div class="col-md-6">
-        <app-grafica-barra></app-grafica-barra>
+        <app-grafica-barra [barChartData]="proveedoresData"
+                            [barChartLabels]="proveedoresLabels"></app-grafica-barra>
     </div>
 </div>
