--- a/src/app/graficas/pages/dona-http/dona-http.component.html
+++ b/src/app/graficas/pages/dona-http/dona-http.component.html
@@ -1,1 +1,24 @@
-<p>dona-http works!</p>
+<h1>Redes sociales mas usadas</h1>
+<hr>
+
+<div class="alert alert-info" *ngIf="doughnutChartData.length === 0; else divGrafica">
+    Cargando Data...
+</div>
+
+<div class="row" >
+    <div class="col">
+        <ng-template #divGrafica>
+            <div style="display: block">
+                <canvas baseChart class="chart"
+                    [data]="doughnutChartData"
+                    [labels]="doughnutChartLabels"
+                    [chartType]="doughnutChartType"
+                    [colors]="colors">
+                </canvas>
+            </div>
+            <span class="float-end text-primary">
+                Información en billones de usuarios
+            </span>
+        </ng-template>
+    </div>
+</div>
